--- a/.gitignore
+++ b/.gitignore
@@ -160,8 +160,8 @@ cython_debug/
 #.idea/
 
 # notebooks
-notebooks/*
-!notebooks/.gitkeep
+# notebooks/*
+# !notebooks/.gitkeep
 
 # resources
 resources/*
