--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ authors = ["osushinekotan"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pandas = "^2.0.3"
+pyyaml = "^6.0.1"
+pyarrow = "^12.0.1"
+colorlog = "^6.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
