--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^2.0.3"
 pyyaml = "^6.0.1"
 pyarrow = "^12.0.1"
 colorlog = "^6.7.0"
+torch = "^2.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
