--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ pyyaml = "^6.0.1"
 pyarrow = "^12.0.1"
 colorlog = "^6.7.0"
 torch = "^2.0.1"
+plotly = "^5.15.0"
+nbformat = "^5.9.2"
+dash = "^2.11.1"
 
 
 [tool.poetry.group.dev.dependencies]
