--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ torch = "^2.0.1"
 plotly = "^5.15.0"
 nbformat = "^5.9.2"
 dash = "^2.11.1"
+ipykernel = "^6.25.0"
+jupyter = "^1.0.0"
+jupyterlab-code-formatter = "^2.2.1"
+jupyterlab = "^4.0.3"
+jupyterlab-tabnine = "^0.0.24"
 
 
 [tool.poetry.group.dev.dependencies]
