--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ jupyterlab-tabnine = "^0.0.24"
 pytorch-pfn-extras = "^0.7.1"
 transformers = "^4.31.0"
 setuptools = "^68.0.0"
+joblib = "^1.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
