--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytorch-pfn-extras = "^0.7.1"
 transformers = "^4.31.0"
 setuptools = "^68.0.0"
 joblib = "^1.3.1"
+scikit-learn = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
