--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ transformers = "^4.31.0"
 setuptools = "^68.0.0"
 joblib = "^1.3.1"
 scikit-learn = "^1.3.0"
+wandb = "^0.15.8"
 
 
 [tool.poetry.group.dev.dependencies]
