--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -31,7 +31,7 @@ nn:
   device: ???
   padding_value: -999
   max_epochs: 2
-  gradient_accumulation_steps: 4
+  gradient_accumulation_steps: 1
   clip_grad_norm: 1000
   fp16: False
   batch_scheduler: True
@@ -125,3 +125,4 @@ nn:
     optimizer: "@/nn/optimizer"
     num_warmup_steps: 0
     num_training_steps: "@/nn/num_training_steps"
+    num_cycles: 0
