--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ setuptools = "^68.0.0"
 joblib = "^1.3.1"
 scikit-learn = "^1.3.0"
 wandb = "^0.15.8"
+geobleu = {path = "geobleu", develop = true}
 
 
 [tool.poetry.group.dev.dependencies]
