--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -36,7 +36,7 @@ nn:
   out_dir: "001/models"
   device: ???
   padding_value: -999
-  max_epochs: 2
+  max_epochs: 100
   gradient_accumulation_steps: 1
   clip_grad_norm: 1000
   fp16: False
@@ -46,14 +46,14 @@ nn:
 
   feature:
     feature_names: ???
-    auxiliary_names: ["t", "d"]
+    auxiliary_names: ["t", "d", "x", "y"]
     target_names: ["x", "y"]
 
   model:
     type: CustomLSTMModelV1
     input_size1: ???
     input_size2: ???
-    hidden_size: 2
+    hidden_size: 8
     output_size: ???
 
   criterion:
@@ -120,8 +120,8 @@ nn:
   optimizer:
     type: AdamW
     params: { type: method_call, obj: "@/nn/model", method: parameters }
-    lr: 2.0e-4
-    weight_decay: 1.0e-2
+    lr: 1.0e-1
+    weight_decay: 0
     eps: 1.0e-6
     betas: [0.9, 0.999]
 
