--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ target-version = "py311"
 unfixable = ["F401", "F841"]
 ignore = ["E501"]
 line-length = 120
+exclude = ["geobleu"]
 
 [tool.black]
 line-length = 120
