--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ pandas = "^2.0.3"
 pyyaml = "^6.0.1"
 pyarrow = "^12.0.1"
 colorlog = "^6.7.0"
-torch = "^2.0.1"
 plotly = "^5.15.0"
 nbformat = "^5.9.2"
 dash = "^2.11.1"
@@ -19,13 +18,14 @@ jupyter = "^1.0.0"
 jupyterlab-code-formatter = "^2.2.1"
 jupyterlab = "^4.0.3"
 jupyterlab-tabnine = "^0.0.24"
-pytorch-pfn-extras = "^0.7.1"
 transformers = "^4.31.0"
 setuptools = "^68.0.0"
 joblib = "^1.3.1"
 scikit-learn = "^1.3.0"
 wandb = "^0.15.8"
 geobleu = {path = "geobleu", develop = true}
+torch = ">=2.0.0, !=2.0.1"
+pytorch-pfn-extras = "^0.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
