--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ wandb = "^0.15.8"
 geobleu = {path = "geobleu", develop = true}
 torch = ">=2.0.0, !=2.0.1"
 pytorch-pfn-extras = "^0.7.1"
+polars = "^0.18.13"
 
 
 [tool.poetry.group.dev.dependencies]
