--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -21,7 +21,7 @@ fe:
         group_values: ["t"],
         intervals: [1, -1],
       }
-        - {
+    - {
         type: GroupedShiftFeatureExtractor,
         group_key: uid,
         group_values: ["d", "x", "y"],
@@ -32,6 +32,32 @@ fe:
         group_key: ["uid", "d"],
         group_values: ["t"],
         intervals: [1, -1],
+      }
+    - {
+        type: GroupedSimpleFeatureExtoractor,
+        group_key: ["uid"],
+        group_values: ["x", "y"],
+        agg_methods: ["min", "max", "mean", "median"],
+      }
+    - {
+        type: GroupedSimpleFeatureExtoractor,
+        group_key: ["uid", "d"],
+        group_values: ["x", "y"],
+        agg_methods: ["min", "max", "mean", "median"],
+      }
+    - {
+        type: TimeGroupedSimpleFeatureExtoractor,
+        group_key: ["uid", "d"],
+        group_values: ["x", "y"],
+        agg_methods: ["min", "max", "mean", "median"],
+        time_range: { "t": [16, 36] }, # 8~18
+      }
+    - {
+        type: TimeGroupedSimpleFeatureExtoractor,
+        group_key: ["uid", "d"],
+        group_values: ["x", "y"],
+        agg_methods: ["min", "max", "mean", "median"],
+        time_range: { "t": [38, 48] }, # 19~24
       }
     - { type: RawFeatureExtractor, use_columns: ["d", "t", "x", "y"] } # + poi features
   use_poi_features: True
