--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -3,6 +3,7 @@ global:
   seed: 8823
   debug: True
   resources: "/workspace/resources"
+  padding_value: -999
 
 fe:
   out_dir: "001/features"
@@ -18,7 +19,7 @@ fe:
     - {
         type: GroupedDiffFeatureExtractor,
         group_key: uid,
-        group_values: ["d", "x", "y", "cycle_07", "cycle_14"],
+        group_values: ["d", "x", "y"],
         intervals: [1, -1, 2, -2],
       }
     - {
@@ -51,48 +52,6 @@ fe:
         group_values: ["x", "y"],
         agg_methods: ["min", "max", "mean", "median"],
       }
-    - {
-        type: TimeGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "d"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
-        time_range: { "t": [16, 36] }, # 8~18
-      }
-    - {
-        type: TimeGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "cycle_07"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
-        time_range: { "t": [16, 36] }, # 8~18
-      }
-    - {
-        type: TimeGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "cycle_14"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
-        time_range: { "t": [16, 36] }, # 8~18
-      }
-    - {
-        type: TimeGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "d"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
-        time_range: { "t": [38, 48] }, # 19~24
-      }
-    - {
-        type: TimeGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "cycle_07"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
-        time_range: { "t": [38, 48] }, # 19~24
-      }
-    - {
-        type: TimeGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "cycle_14"],
-        group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
-        time_range: { "t": [38, 48] }, # 19~24
-      }
     - { type: RawFeatureExtractor, use_columns: ["d", "t", "x", "y"] } # + poi features
 
   regression_target_transform: log
@@ -111,7 +70,7 @@ cv:
 nn:
   out_dir: "001/models"
   device: ???
-  padding_value: -999
+  padding_value: "@/global/padding_value"
   max_epochs: 4
   gradient_accumulation_steps: 4
   clip_grad_norm: 1
