--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -95,7 +95,7 @@ fe:
       }
     - { type: RawFeatureExtractor, use_columns: ["d", "t", "x", "y"] } # + poi features
 
-  regression_target_transform: log
+  regression_target_transform: mean_diff
   scaling:
     type: StandardScaler
 
