--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -43,13 +43,13 @@ fe:
         type: GroupedSimpleFeatureExtoractor,
         group_key: ["uid"],
         group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
+        agg_methods: ["min", "max", "mean", "median", "std"],
       }
     - {
         type: GroupedSimpleFeatureExtoractor,
         group_key: ["uid", "d"],
         group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median"],
+        agg_methods: ["min", "max", "mean", "median", "std"],
       }
     - { type: RawFeatureExtractor, use_columns: ["d", "t", "x", "y"] } # + poi features
 
@@ -80,7 +80,7 @@ nn:
 
   feature:
     feature_names: ???
-    auxiliary_names: ??? # f_d_*, f_t_*
+    auxiliary_names: ??? # f_d_*, f_t_*, f_x_grpby_uid_*, f_y_grpby_uid_*
     target_names: ["x", "y"]
 
   model:
