--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -69,6 +69,12 @@ fe:
         group_values: ["x", "y"],
         agg_methods: ["min", "max", "mean", "median", "std"],
       }
+    - {
+        type: GroupedSimpleFeatureExtoractor,
+        group_key: ["uid", "dayofweek", "t_label"],
+        group_values: ["x", "y"],
+        agg_methods: ["min", "max", "mean", "median", "std"],
+      }
     - { type: RawFeatureExtractor, use_columns: ["d", "t", "x", "y"] } # + poi features
 
   regression_target_transform: z_score
@@ -98,7 +104,7 @@ nn:
 
   feature:
     feature_names: ???
-    auxiliary_names: ??? # f_d_*, f_t_*, f_x_grpby_uid_*, f_y_grpby_uid_*, f_x_grpby_uid_dayofweek_*, f_y_grpby_uid_dayofweek_*
+    auxiliary_names: ??? # f_d_*, f_t_*, f_{x,y}_grpby_uid_*, f_{x,y}_grpby_uid_dayofweek_*, f_{x,y}_grpby_uid_dayofweek_t_label*
     target_names: ["x", "y"]
 
   model:
