--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -41,12 +41,6 @@ fe:
       }
     - {
         type: GroupedShiftFeatureExtractor,
-        group_key: ["uid", "d"],
-        group_values: ["t"],
-        intervals: [1, -1, 2, -2],
-      }
-    - {
-        type: GroupedShiftFeatureExtractor,
         group_key: ["uid", "dayofweek"],
         group_values: ["x", "y"],
         intervals: [1, -1, 2, -2],
@@ -59,13 +53,25 @@ fe:
       }
     - {
         type: GroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "d"],
+        group_key: ["uid", "dayofweek"],
         group_values: ["x", "y"],
         agg_methods: ["min", "max", "mean", "median", "std"],
       }
     - {
         type: GroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "dayofweek"],
+        group_key: ["uid", "t_label"],
+        group_values: ["x", "y"],
+        agg_methods: ["min", "max", "mean", "median", "std"],
+      }
+    - {
+        type: GroupedSimpleFeatureExtoractor,
+        group_key: ["uid", "weekend"],
+        group_values: ["x", "y"],
+        agg_methods: ["min", "max", "mean", "median", "std"],
+      }
+    - {
+        type: GroupedSimpleFeatureExtoractor,
+        group_key: ["uid", "weekend", "t_label"],
         group_values: ["x", "y"],
         agg_methods: ["min", "max", "mean", "median", "std"],
       }
