--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -114,7 +114,7 @@ nn:
     target_names: ["x", "y"]
 
   model:
-    type: CustomLSTMModelV1
+    type: CustomLSTMModelV1WithAttention
     input_size1: ???
     input_size2: ???
     hidden_size: 2
