--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -1,14 +1,14 @@
 global:
   project: "HuMob-Challenge-2023"
   seed: 8823
-  debug: True
+  debug: False
   resources: "/workspace/resources"
 
 fe:
   out_dir: "001/features"
   overwrite: False
-  dataset: "task2_dataset"
-  n_train_uid: 25000
+  dataset: "task1_dataset"
+  n_train_uid: 20000
   use_poi_features: True
   poi_decomposer:
     type: NMF
@@ -101,7 +101,7 @@ nn:
   out_dir: "001/models"
   device: ???
   padding_value: -999
-  max_epochs: 4
+  max_epochs: 6
   gradient_accumulation_steps: 4
   clip_grad_norm: 1
   fp16: True
@@ -118,7 +118,7 @@ nn:
     type: CustomLSTMModelV1WithAttention
     input_size1: ???
     input_size2: ???
-    hidden_size: 8
+    hidden_size: 512
     num_layers: 1
     dropout: 0
     output_size: ???
@@ -129,7 +129,7 @@ nn:
   metrics:
     type: RMSEGeobleuMetric
     processes: 6
-    sample_size: 100
+    sample_size: 2000
     seed: "@/global/seed"
 
   dataset:
@@ -157,8 +157,8 @@ nn:
         is_train_mode: True
         padding_value: "@/nn/padding_value"
         return_padding_mask: True
-      batch_size: 2
-      num_workers: 4
+      batch_size: 8
+      num_workers: 2
       shuffle: False
       pin_memory: True
       drop_last: True
@@ -170,7 +170,7 @@ nn:
         is_train_mode: True
         padding_value: "@/nn/padding_value"
         return_padding_mask: True
-      batch_size: 2
+      batch_size: 16
       num_workers: 2
       shuffle: False
       pin_memory: True
@@ -183,7 +183,7 @@ nn:
         is_train_mode: False
         padding_value: "@/nn/padding_value"
         return_padding_mask: True
-      batch_size: 2
+      batch_size: 16
       num_workers: 2
       shuffle: False
       pin_memory: True
