--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -1,13 +1,13 @@
 global:
   project: "HuMob-Challenge-2023"
   seed: 8823
-  debug: False
+  debug: True
   resources: "/workspace/resources"
 
 fe:
   out_dir: "001/features"
   overwrite: False
-  dataset: "task1_dataset"
+  dataset: "task2_dataset"
   n_train_uid: 20000
   use_poi_features: True
   poi_decomposer:
