--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -74,12 +74,12 @@ fe:
         type: D60MaskGroupedSimpleFeatureExtoractor,
         group_key: ["uid", "weekend", "t_label_2h"],
         group_values: ["x", "y"],
-        agg_methods: ["min", "max", "mean", "median", "std"],
+        agg_methods: ["mean", "std"],
       }
     - {
         type: RawFeatureExtractor,
         use_columns:
-          ["d", "t", "x", "y", "t_label_2h", "t_label", "weekend", "dayofweek"],
+          ["d", "t", "x", "y", "t_label", "weekend", "dayofweek"],
       } # + poi features
 
   regression_target_transform: z_score
