--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -1,13 +1,13 @@
 global:
   project: "HuMob-Challenge-2023"
   seed: 8823
-  debug: True
+  debug: False
   resources: "/workspace/resources"
 
 fe:
-  out_dir: "001/features"
+  out_dir: "004/features"
   overwrite: False
-  dataset: "task2_dataset"
+  dataset: "task1_dataset"
   n_train_uid: 10000
   use_poi_features: True
   poi_decomposer:
@@ -74,12 +74,17 @@ fe:
         type: D60MaskGroupedSimpleFeatureExtoractor,
         group_key: ["uid", "weekend", "t_label_2h"],
         group_values: ["x", "y"],
-        agg_methods: ["mean", "std"],
+        agg_methods: ["mean", "std", "max", "min"],
+      }
+    - {
+        type: D60MaskGroupedSimpleFeatureExtoractor,
+        group_key: ["uid", "t_label_2h", "dayofweek"],
+        group_values: ["x", "y"],
+        agg_methods: ["mean", "std", "max", "min"],
       }
     - {
         type: RawFeatureExtractor,
-        use_columns:
-          ["d", "t", "x", "y", "t_label", "weekend", "dayofweek"],
+        use_columns: ["d", "t", "x", "y", "t_label", "weekend", "dayofweek"],
       } # + poi features
 
   regression_target_transform: z_score
@@ -96,10 +101,10 @@ cv:
     random_state: "@/global/seed"
 
 nn:
-  out_dir: "001/models"
+  out_dir: "004/models"
   device: ???
   padding_value: -999
-  max_epochs: 2
+  max_epochs: 6
   gradient_accumulation_steps: 32
   clip_grad_norm: 1
   fp16: True
@@ -116,8 +121,8 @@ nn:
     type: CustomLSTMModelV1
     input_size1: ???
     input_size2: ???
-    hidden_size: 2
-    num_layers: 1
+    hidden_size: 512
+    num_layers: 2
     dropout: 0
     output_size: ???
 
@@ -127,7 +132,7 @@ nn:
   metrics:
     type: RMSEGeobleuMetric
     processes: 6
-    sample_size: 10
+    sample_size: 500
     seed: "@/global/seed"
 
   dataset:
