--- a/src/conf/custom.yaml
+++ b/src/conf/custom.yaml
@@ -78,7 +78,7 @@ fe:
       }
     - {
         type: D60MaskGroupedSimpleFeatureExtoractor,
-        group_key: ["uid", "t_label_2h", "dayofweek"],
+        group_key: ["uid", "dayofweek", "t_label_2h"],
         group_values: ["x", "y"],
         agg_methods: ["mean", "std", "max", "min"],
       }
